fix(button): alignment and focus

--- a/src/scss/objects/_objects.button.scss
+++ b/src/scss/objects/_objects.button.scss
@@ -42,8 +42,10 @@
     background: $color-dark;
     border: solid 2px $color-dark;
     color: $color-white;
-    height: 64px;
+    height: 60px;
     margin: 0 auto;
+    outline: solid 2px $color-dark;
+    outline-offset: 0;
     padding: 0 32px;
 }
 
@@ -58,4 +60,8 @@
     background-color: $color-dark;
     box-shadow: 0 10px 28px rgba(47,47,47,.3);
     transform: translateY(-2px);
+}
+
+.Button--primary:focus {
+    outline: 4px solid #e4deff;
 }
